# gpdb

./: .travis.yml
concourse/pipelines/: gpdb_master-generated.yml
concourse/pipelines/templates/: gpdb-tpl.yml
concourse/tasks/: build_orca_using_conan.yml
depends/: conanfile_orca.txt
gpAux/releng/: releng.mk
gpcontrib/quicklz/expected/: compression_quicklz.out
gpcontrib/quicklz/sql/: compression_quicklz.sql
gpcontrib/zstd/: zstd_compression.c
gpcontrib/zstd/expected/: zstd_column_compression.out
gpcontrib/zstd/sql/: zstd_column_compression.sql
gpcontrib/zstd/test/: Makefile  zstd_compression_test.c  zstd_mock.c
src/backend/cdb/: cdbgroup.c  cdbpartition.c  cdbpath.c
src/backend/codegen/: README.md
src/backend/commands/: copy.c  explain.c  explain_gp.c  tablecmds.c
src/backend/executor/: execMain.c  execProcnode.c  execScan.c  execTuples.c  execUtils.c  nodeDynamicIndexscan.c  nodeDynamicTableScan.c  nodeHash.c  nodeMotion.c  nodeNestloop.c  nodeSubplan.c
src/backend/gpopt/: CGPOptimizer.cpp  gpdbwrappers.cpp
src/backend/gporca/: gporca.mk
src/backend/gporca/libgpos/: CMakeLists.txt  config.h.in
src/backend/gporca/libgpos/include/gpos/: attributes.h
src/backend/gporca/libgpos/include/gpos/common/: CAutoP.h  CAutoRg.h  clibwrapper.h
src/backend/gporca/libgpos/server/src/unittest/gpos/io/: CFileTest.cpp
src/backend/nodes/: copyfuncs.c  outfuncs.c  readfast.c
src/backend/parser/: analyze.c  gram.y  parse_coerce.c  parse_cte.c  parse_partition.c  parse_utilcmd.c
src/backend/replication/: walreceiver.c
src/backend/tcop/: pquery.c
(+118 files in other folders)
